# itertooldict

./: .gitignore  README.md  pyproject.toml
src/iterdict/: __init__.py  core.py
src/iterdict.egg-info/: PKG-INFO  SOURCES.txt
src/itertooldict/: core.py
tests/: test_core.py
