[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itertooldict"
version = "0.2.0"
authors = [
  { name="Eduardo Munoz", email="emunozgutier@gmail.com" },
]
description = "A missing feature of itertools: labeled product of multiple choices from a dictionary."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emunozgutier/itertooldict"
"Documentation" = "https://emunozgutier.github.io/itertooldict/"
"Bug Tracker" = "https://github.com/emunozgutier/itertooldict/issues"
